--- a/main.css
+++ b/main.css
@@ -16,6 +16,19 @@
     font-size: 1.0em;
   }  
 
+  input.shwedtcmp {
+    border: none;
+    background: none;
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    display: inline;
+    margin: 0;
+    padding: 0;
+    font-size: 1.0em;
+    font-family: Arial,sans-serif;
+  }
+
   input.shwedtgrp {
     border: none;
     background: none;
